--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ inquirer==3.1.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.3.1
+kaleido
 kiwisolver==1.4.4
 lightning==2.0.6
 lightning-cloud==0.5.37
