--- a/cfgs/dino_base_rnt100.yaml
+++ b/cfgs/dino_base_rnt100.yaml
@@ -1,12 +1,12 @@
 # TODO: Check which parameters here are actually used and prune out all the ones that aren't
 
 # General parameters
-use_optuna: False
+use_optuna: True
 output_dir: '/data/datasets/research-datasets/output_dir'
 seed: 1234
 new_random: True
 phase: 'train'
-cfg_name: 'dinov2-base'
+cfg_name: 'dino-base'
 
 # Dataset parameters
 dataroot: '/data/datasets/research-datasets'
@@ -26,7 +26,7 @@ image_num_for_reid_validate: 25 # Default 25
 num_triplet_samples: 8 # Default 1
 
 # Model parameters 
-model_modalities: ['R', 'N']
+model_modalities: ['R', 'N', 'T']
 non_generalizable_inputs: False
 model_anchor_only_reid: False # false by default
 model_num_cls_tokens: 2
@@ -36,7 +36,7 @@ vit_embed_dim: 768 # 384 for dino, 768 normally
 model_decoder_output_class_num: 50 # change this when changing datasets
 model_fusion_combos: 'ffd'
 data_token_step: 0
-pretrained_model: "dinov2-base"
+pretrained_model: "dino-base"
 
 # Loss parameters
 loss_fn: "center+ce+triplet_euclidean_soft_margin" 
@@ -56,26 +56,27 @@ warmup_steps: 50
 max_lr: 0.01
  
 # Training parameters
-#gpus: [0, 1, 2, 3]
+# gpus: [0, 1, 2, 3]
 gpus: [4, 5, 6, 7]
 #gpus: [5,7]
 
 ckpt_dir: '/data/datasets/research-datasets/ckpt_dir'
 ckpt_full_path: null #/data/datasets/research-datasets/ckpt_dir/20230803-190747-dino-base/best.pth #'/data/datasets/research-datasets/ckpt_dir/20230730-202650-ffd_three-loss-euclidean_DEiT-B-224-distilled-inference/best.pth' #'/data/datasets/research-datasets/ckpt_dir/20230727-112754-dino_middle_fusion_noconv_exp2_flex_size/best.pth
 batch_size: 20
-num_epochs: 75
+num_epochs: 50
 print_freq: 50
 model_name: "dino_gradual_fusion"
 trainer_name: "trainer_rgbn_triplet"
 verbose: True # print more information
 max_rank: 50 # max number of ranks to calculate cmc and mAP
-n_trials: 50 # number of trials for optuna
+n_trials: 5 # number of trials for optuna
+interpolate_pos_encoding: False
 
 # Weights and Biases Logging
 use_wandb: True
-wandb_project: "mm-mafia-reid-prune"
-study_name: "dinov2-base"
-wandb_run_name: "dinov2-base"
+wandb_project: "mm-mafia-reid-hpo"
+study_name: "dino-base"
+wandb_run_name: "dino-base"
 wandb_trial_name: "frozen-train"
 
 hyperparams:
@@ -92,7 +93,7 @@ hyperparams:
     max: 0.90
     type: float
   beta2:
-    min: 0.96
+    min: 0.97
     max: 0.99
     type: float
   model_num_cls_tokens: 
