--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ attrs==23.1.0
 backoff==2.2.1
 beautifulsoup4==4.12.2
 blessed==1.20.0
+blinker==1.6.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.6
@@ -26,6 +27,7 @@ exceptiongroup==1.1.2
 fastapi==0.100.1
 filelock==3.12.2
 flake8==6.1.0
+Flask==2.3.2
 fonttools==4.41.1
 frozenlist==1.4.0
 fsspec==2023.6.0
@@ -41,7 +43,6 @@ inquirer==3.1.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.3.1
-kaleido
 kiwisolver==1.4.4
 lightning==2.0.6
 lightning-cloud==0.5.37
@@ -87,6 +88,7 @@ pyflakes==3.1.0
 Pygments==2.15.1
 PyJWT==2.8.0
 pynndescent==0.5.10
+pynvml==11.5.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
 python-editor==1.0.4
@@ -95,6 +97,7 @@ pytorch-lightning==2.0.6
 pytz==2023.3
 PyYAML==6.0.1
 readchar==4.0.5
+redis==4.6.0
 regex==2023.6.3
 requests==2.31.0
 rich==13.5.0
@@ -120,7 +123,7 @@ torchmetrics==1.0.1
 torchvision==0.15.2
 tqdm==4.65.0
 traitlets==5.9.0
-transformers==4.31.0
+transformers==4.32.0.dev0
 triton==2.0.0
 typing-extensions==4.7.1
 tzdata==2023.3
@@ -132,6 +135,7 @@ wandb==0.15.7
 wcwidth==0.2.6
 websocket-client==1.6.1
 websockets==11.0.3
+Werkzeug==2.3.6
 yapf==0.40.1
 yarl==1.9.2
 zipp==3.16.2
