--- a/cfgs/deit_gradual_fusion_rnt100.yaml
+++ b/cfgs/deit_gradual_fusion_rnt100.yaml
@@ -6,7 +6,7 @@ output_dir: '/data/datasets/research-datasets/output_dir'
 seed: 1746756492
 new_random: True
 phase: 'train'
-cfg_name: 'deit-rnt100-widthscale'
+cfg_name: 'deit-rnt100-lrschedule'
 
 # Dataset parameters
 dataroot: '/data/datasets/research-datasets'
@@ -15,10 +15,10 @@ dataset_name: 'RGBNT100'
 workers: 128
 input_size: [224, 224] # 224 normally, 384 for larger deit
 hflip: 0.5 # threshold for random horizontal flip
-resize_min: 0.5 # only if data_augmentation is True
+resize_min: 0.8 # only if data_augmentation is True
 resize_max: 1.0 # only if data_augmentation is True
-data_augmentation: False
-augment_type: "" # Optional: "random_erasure"
+data_augmentation: True
+augment_type: "random_erasure" # Optional: "random_erasure"
 train_ratio: 0.8 # use 80% of the data for training and 20% for validation
 one_hot: True
 image_num_for_reid_train: 1 # Default 1 -- DO NOT CHANGE THIS ONE AND num_triplet_samples AT SAME TIME THEY DO SAME THING
@@ -51,7 +51,7 @@ lr: 0.00001
 weight_decay: 0.001
 beta1: 0.83
 beta2: 0.97
-lr_scheduler_name: 'warmup_cosine_lr'
+lr_scheduler_name: 'warmup_sqrt_lr'
 warmup_steps: 50
 max_lr: 0.01
  
@@ -61,7 +61,7 @@ gpus: [4, 5, 6, 7]
 #gpus: [5,7]
 
 ckpt_dir: '/data/datasets/research-datasets/ckpt_dir'
-ckpt_full_path: null # '/data/datasets/research-datasets/ckpt_dir/20230730-202650-ffd_three-loss-euclidean_DEiT-B-224-distilled-inference/best.pth' #'/data/datasets/research-datasets/ckpt_dir/20230727-112754-dino_middle_fusion_noconv_exp2_flex_size/best.pth
+ckpt_full_path: null # /data/datasets/research-datasets/ckpt_dir/20230805-111545-deit-rnt100-lossablate/best.pth  # '/data/datasets/research-datasets/ckpt_dir/20230730-202650-ffd_three-loss-euclidean_DEiT-B-224-distilled-inference/best.pth' #'/data/datasets/research-datasets/ckpt_dir/20230727-112754-dino_middle_fusion_noconv_exp2_flex_size/best.pth
 batch_size: 20
 num_epochs: 40
 print_freq: 50
@@ -73,15 +73,15 @@ n_trials: 1 # number of trials for optuna
 
 # Weights and Biases Logging
 use_wandb: True
-wandb_project: "mm-mafia-reid-hpo"
-study_name: "deit-rnt100-widthscale"
-wandb_run_name: "deit-rnt100-widthscale"
-wandb_trial_name: "token=20"
+wandb_project: "mm-mafia-reid-new-mAP"
+study_name: "deit-rnt100-lrschedule"
+wandb_run_name: "deit-rnt100-lrschedule"
+wandb_trial_name: "all_augs"
 
 hyperparams:
   lr:
-    min: 0.00001
-    max: 0.00001
+    min: 0.00002
+    max: 0.00002
     type: loguniform
   weight_decay:
     min: 0.001
@@ -96,12 +96,12 @@ hyperparams:
     max: 0.98
     type: float
   model_num_cls_tokens: 
-    min: 20
-    max: 20
+    min: 4
+    max: 4
     type: int
   model_num_fusion_tokens: 
-    min: 20
-    max: 20
+    min: 4
+    max: 4
     type: int
   model_num_heads: 
     opt: [8]
