--- a/cfgs/deit_gradual_fusion_rnt100.yaml
+++ b/cfgs/deit_gradual_fusion_rnt100.yaml
@@ -6,7 +6,7 @@ output_dir: '/data/datasets/research-datasets/output_dir'
 seed: 1746756492
 new_random: True
 phase: 'train'
-cfg_name: 'deit-rnt100-lrschedule'
+cfg_name: 'deit-rnt100-ablations'
 
 # Dataset parameters
 dataroot: '/data/datasets/research-datasets'
@@ -18,7 +18,7 @@ hflip: 0.5 # threshold for random horizontal flip
 resize_min: 0.8 # only if data_augmentation is True
 resize_max: 1.0 # only if data_augmentation is True
 data_augmentation: False
-augment_type: "" # Optional: "random_erasure"
+augment_type: "random_erasure" # Optional: "random_erasure"
 train_ratio: 0.8 # use 80% of the data for training and 20% for validation
 one_hot: True
 image_num_for_reid_train: 1 # Default 1 -- DO NOT CHANGE THIS ONE AND num_triplet_samples AT SAME TIME THEY DO SAME THING
@@ -30,19 +30,20 @@ model_modalities: ['R', 'N', 'T']
 non_generalizable_inputs: False
 model_anchor_only_reid: False # false by default
 model_num_cls_tokens: 1
-model_num_fusion_tokens: 2
+model_num_fusion_tokens: 1
 model_num_heads: 8
 vit_embed_dim: 768 # 384 for dino, 768 normally
 model_decoder_output_class_num: 50 # change this when changing datasets
 model_fusion_combos: 'ffd'
 data_token_step: 0
 pretrained_model: "distilled-224"
+unfreeze: True
 
 # Loss parameters
 loss_fn: "center+ce+triplet_euclidean_soft_margin" 
 loss_weighting: 0.5
 center_weighting: 0.0005
-label_smoothing: 0.0
+label_smoothing: 0.1
 alpha: 1
 
 # Optimizer parameters
@@ -56,12 +57,12 @@ warmup_steps: 50
 max_lr: 0.01
  
 # Training parameters
-gpus: [0, 1, 2, 3]
+gpus: [1, 2, 3, 4]
 # gpus: [4, 5, 6, 7]
 #gpus: [5,7]
 
 ckpt_dir: '/data/datasets/research-datasets/ckpt_dir'
-ckpt_full_path: null # /data/datasets/research-datasets/ckpt_dir/20230805-111545-deit-rnt100-lossablate/best.pth  # '/data/datasets/research-datasets/ckpt_dir/20230730-202650-ffd_three-loss-euclidean_DEiT-B-224-distilled-inference/best.pth' #'/data/datasets/research-datasets/ckpt_dir/20230727-112754-dino_middle_fusion_noconv_exp2_flex_size/best.pth
+ckpt_full_path: '/data/datasets/research-datasets/ckpt_dir/20230807-122700-deit-rnt100-ablations/best.pth' 
 batch_size: 20
 num_epochs: 40
 print_freq: 50
@@ -74,9 +75,9 @@ n_trials: 1 # number of trials for optuna
 # Weights and Biases Logging
 use_wandb: True
 wandb_project: "mm-mafia-reid-new-mAP"
-study_name: "deit-rnt100-lrschedule"
-wandb_run_name: "deit-rnt100-lrschedule"
-wandb_trial_name: "modality=2-fusion=1"
+study_name: "deit-rnt100-ablations"
+wandb_run_name: "deit-rnt100-ablations"
+wandb_trial_name: "modality=0_unfrozen"
 
 hyperparams:
   lr:
@@ -96,8 +97,8 @@ hyperparams:
     max: 0.98
     type: float
   model_num_cls_tokens: 
-    min: 2
-    max: 2
+    min: 0
+    max: 0
     type: int
   model_num_fusion_tokens: 
     min: 1
