--- a/cfgs/visualize_embeddings.yaml
+++ b/cfgs/visualize_embeddings.yaml
@@ -1,3 +1,6 @@
+seed: 906579864 
+new_random: False 
+
 # Dataset parameters
 dataroot: '/data/datasets/research-datasets'
 dataset: 'reid_mm/RGBNT100'
@@ -19,20 +22,21 @@ num_triplet_samples: 8 # Default 1
 model_modalities: ['R', 'N', 'T']
 model_anchor_only_reid: False #by default
 model_num_verb_blocks: 1
-model_num_cls_tokens: 2
-model_num_fusion_tokens: 2
+model_num_cls_tokens: 1
+model_num_fusion_tokens: 1
 model_num_heads: 8
 vit_embed_dim: 768
 model_decoder_output_class_num: 50 
 model_fusion_combos: 'ffd'
 data_token_step: 0
-interpolate_pos_encoding: True
- 
+interpolate_pos_encoding: False
+pretrained_model: "distilled-224"
+unfreeze: True
 
 # Training parameters
-gpus: [0, 1, 2, 3]
+gpus: [5]
 ckpt_dir: '/data/datasets/research-datasets/ckpt_dir'
-ckpt_full_path: '/data/datasets/research-datasets/ckpt_dir/20230730-202650-ffd_three-loss-euclidean_DEiT-B-224-distilled-inference/best.pth' #'/data/datasets/research-datasets/ckpt_dir/20230727-112754-dino_middle_fusion_noconv_exp2_flex_size/best.pth'
+ckpt_full_path: '/data/datasets/research-datasets/ckpt_dir/20230808-092335-deit-rnt100-multistage/best.pth'
 batch_size: 20
 num_epochs: 250
 print_freq: 50
@@ -46,6 +50,6 @@ max_rank: 50
 # Visualization configs
 visualize_embeddings: True
 vis_save_path: "./visualizations/"
-vis_dim: 3
-vis_reduction_method: 'tsne'
+vis_dim: 2
+vis_reduction_method: 'umap'
 
