--- a/cfgs/deit_gradual_fusion_rnt100_stage1.yaml
+++ b/cfgs/deit_gradual_fusion_rnt100_stage1.yaml
@@ -29,8 +29,8 @@ num_triplet_samples: 8 # Default 1
 model_modalities: ['R', 'N', 'T']
 non_generalizable_inputs: False
 model_anchor_only_reid: False # false by default
-model_num_cls_tokens: 2
-model_num_fusion_tokens: 2
+model_num_cls_tokens: 1
+model_num_fusion_tokens: 1
 model_num_heads: 8
 vit_embed_dim: 768 # 384 for dino, 768 normally
 model_decoder_output_class_num: 50 # change this when changing datasets
@@ -63,7 +63,7 @@ gpus: [3, 5, 6, 7]
 # gpus: [5, 6, 7, 4]
 
 ckpt_dir: '/data/datasets/research-datasets/ckpt_dir'
-ckpt_full_path: null # '/data/datasets/research-datasets/ckpt_dir/20230808-121427-deit-rnt100-multistage/best.pth'
+ckpt_full_path: null 
 batch_size: 20
 num_epochs: 25
 print_freq: 50
@@ -78,7 +78,7 @@ use_wandb: True
 wandb_project: "mm-mafia-reid-new-mAP"
 study_name: "deit-rnt100-multistage"
 wandb_run_name: "deit-rnt100-multistage"
-wandb_trial_name: "stage1-token=2"
+wandb_trial_name: "stage1"
 
 hyperparams:
   lr:
@@ -98,12 +98,12 @@ hyperparams:
     max: 0.98
     type: float
   model_num_cls_tokens: 
-    min: 2
-    max: 2
+    min: 1
+    max: 1
     type: int
   model_num_fusion_tokens: 
-    min: 2
-    max: 2
+    min: 1
+    max: 1
     type: int
   model_num_heads: 
     opt: [8]
