--- a/cfgs/deit_gradual_fusion_rnt100_stage2.yaml
+++ b/cfgs/deit_gradual_fusion_rnt100_stage2.yaml
@@ -52,7 +52,7 @@ lr: 0.00002
 weight_decay: 0.001
 beta1: 0.83
 beta2: 0.97
-lr_scheduler_name: 'warmup_sqrt_lr'
+lr_scheduler_name: ''
 warmup_steps: 50
 max_lr: 0.01
 reset_scheduler: False
