--- a/cfgs/deit_gradual_fusion_rnt100_stage2.yaml
+++ b/cfgs/deit_gradual_fusion_rnt100_stage2.yaml
@@ -58,12 +58,13 @@ max_lr: 0.01
 reset_scheduler: False
 
 # Training parameters
-# gpus: [1, 2, 3, 4, 5, 6, 7]
-gpus: [3, 5, 6, 7]
+gpus: [1, 2, 3, 4, 5, 6, 7]
+# gpus: [4, 5, 6, 7]
 # gpus: [5, 6, 7, 4]
+train_stage: 2  
 
 ckpt_dir: '/data/datasets/research-datasets/ckpt_dir'
-ckpt_full_path: # INSERT HERE
+ckpt_full_path: /data/datasets/research-datasets/ckpt_dir/20230810-173757-deit-rnt100-model-lrnble-avg/best.pth # INSERT HERE
 batch_size: 20
 num_epochs: 30
 print_freq: 50
@@ -76,9 +77,9 @@ n_trials: 1 # number of trials for optuna
 # Weights and Biases Logging
 use_wandb: True
 wandb_project: "mm-mafia-reid-new-mAP"
-study_name: "deit-rnt100-multistage"
-wandb_run_name: "deit-rnt100-multistage"
-wandb_trial_name: "stage2"
+study_name: "deit-rnt100-model-lrnble-avg"
+wandb_run_name: "deit-rnt100-lrnble-avg-only-fusion-tokens-2(no avg)"
+wandb_trial_name: "deit-rnt100-lrnble-avg-only-fusion-tokens-2(no avg)"
 
 hyperparams:
   lr:
