--- a/cfgs/deit_gradual_fusion_rnt100_stage1.yaml
+++ b/cfgs/deit_gradual_fusion_rnt100_stage1.yaml
@@ -23,7 +23,7 @@ train_ratio: 0.8 # use 80% of the data for training and 20% for validation
 one_hot: True
 image_num_for_reid_train: 1 # Default 1 -- DO NOT CHANGE THIS ONE AND num_triplet_samples AT SAME TIME THEY DO SAME THING
 image_num_for_reid_validate: 25 # Default 25
-num_triplet_samples: 25 # Default 1
+num_triplet_samples: 8 # Default 1
 
 # Model parameters 
 model_modalities: ['R', 'N', 'T']
@@ -58,15 +58,15 @@ max_lr: 0.01
 reset_scheduler: False
 
 # Training parameters
-gpus: [0, 1, 2, 3]
+gpus: [4, 5, 6, 7]
 train_stage: 1
 
 ckpt_dir: '/data/datasets/research-datasets/ckpt_dir'
 ckpt_full_path: null 
-batch_size: 20
+batch_size: 26
 num_epochs: 40
 print_freq: 50
-model_name: "deit_gradual_fusion"
+model_name: "deit_gradual_fusion_v4"
 trainer_name: "trainer_rgbn_triplet"
 verbose: True # print more information
 max_rank: 50 # max number of ranks to calculate cmc and mAP
@@ -75,9 +75,9 @@ n_trials: 1 # number of trials for optuna
 # Weights and Biases Logging
 use_wandb: True
 wandb_project: "mm-mafia-reid-new-mAP"
-study_name: "deit-rnt100-model-modality-tok"
-wandb_run_name: "stage1_-_new_lr=0.00002-cls=0-train-data=25"
-wandb_trial_name: "stage1_-_new_lr=0.00002-cls=0-train-data=25"
+study_name: "deit-rnt100-model-data-tok-conv-pool"
+wandb_run_name: "stage1_cls=0_fus=1-hyperams=old-no-activation"
+wandb_trial_name: "stage1_cls=0_fus=1-hyperams=old-no-activation"
 lrnable_token: 'new'
 lagging_modality_token: True
 
