--- a/cfgs/deit_gradual_fusion_rnt100_stage2.yaml
+++ b/cfgs/deit_gradual_fusion_rnt100_stage2.yaml
@@ -64,9 +64,9 @@ gpus: [1, 2, 3, 4, 5, 6, 7]
 train_stage: 2  
 
 ckpt_dir: '/data/datasets/research-datasets/ckpt_dir'
-ckpt_full_path: /data/datasets/research-datasets/ckpt_dir/20230810-173757-deit-rnt100-model-lrnble-avg/best.pth # INSERT HERE
+ckpt_full_path: /data/datasets/research-datasets/ckpt_dir/20230814-103827-deit-rnt100-model-modality-tok/best.pth #/data/datasets/research-datasets/ckpt_dir/20230814-103827-deit-rnt100-model-modality-tok/best.pth # INSERT HERE
 batch_size: 20
-num_epochs: 30
+num_epochs: 60
 print_freq: 50
 model_name: "deit_gradual_fusion"
 trainer_name: "trainer_rgbn_triplet"
@@ -74,12 +74,15 @@ verbose: True # print more information
 max_rank: 50 # max number of ranks to calculate cmc and mAP
 n_trials: 1 # number of trials for optuna
 
+lrnable_token: 'new'
+lagging_modality_token: True
+
 # Weights and Biases Logging
 use_wandb: True
 wandb_project: "mm-mafia-reid-new-mAP"
-study_name: "deit-rnt100-model-lrnble-avg"
-wandb_run_name: "deit-rnt100-lrnble-avg-only-fusion-tokens-2(no avg)"
-wandb_trial_name: "deit-rnt100-lrnble-avg-only-fusion-tokens-2(no avg)"
+study_name: "deit-rnt100-model-data-tok-conv-pool"
+wandb_run_name: "deit-rnt100-stage2"
+wandb_trial_name: "deit-rnt100-stage2"
 
 hyperparams:
   lr:
@@ -99,8 +102,8 @@ hyperparams:
     max: 0.98
     type: float
   model_num_cls_tokens: 
-    min: 1
-    max: 1
+    min: 0
+    max: 0
     type: int
   model_num_fusion_tokens: 
     min: 1
