--- a/cfgs/deit_gradual_fusion_rnt100_stage1.yaml
+++ b/cfgs/deit_gradual_fusion_rnt100_stage1.yaml
@@ -28,7 +28,7 @@ model_modalities: ['R', 'N', 'T']
 non_generalizable_inputs: False
 model_anchor_only_reid: False # false by default
 model_num_cls_tokens: 0
-model_num_fusion_tokens: 1
+model_num_fusion_tokens: 2
 model_num_heads: 8
 vit_embed_dim: 768 # 384 for dino, 768 normally
 model_decoder_output_class_num: 50 # change this when changing datasets
@@ -56,7 +56,7 @@ max_lr: 0.01
 reset_scheduler: False
 
 # Training parameters
-gpus: [0]
+gpus: [0, 1, 2, 3]
 train_stage: 1
 
 ckpt_dir: '/data/datasets/research-datasets/ckpt_dir'
@@ -73,9 +73,9 @@ n_trials: 1 # number of trials for optuna
 # Weights and Biases Logging
 use_wandb: True
 wandb_project: "mm-mafia-reid-new-mAP"
-study_name: "deit-rnt100-model-data-tok-conv-pool"
-wandb_run_name: "stage1_cls=0_fus=1-hyperams=old-no-act_distill-fus"
-wandb_trial_name: "stage1_cls=0_fus=1-hyperams=old-no-act_distill-fus"
+study_name: "deit-rnt100-model-best"
+wandb_run_name: "stage1_cls=0_fus=1_del-f-neg"
+wandb_trial_name: "stage1_cls=0_fus=1_del-f-neg"
 lrnable_token: 'new' # eva if ur seeing this u could take it out
 lagging_modality_token: True
 
@@ -101,8 +101,8 @@ hyperparams:
     max: 0
     type: int
   model_num_fusion_tokens: 
-    min: 1
-    max: 1
+    min: 2
+    max: 2
     type: int
   model_num_heads: 
     opt: [8]
