--- a/cfgs/deit_gradual_fusion_rnt100_stage2.yaml
+++ b/cfgs/deit_gradual_fusion_rnt100_stage2.yaml
@@ -1,50 +1,48 @@
-# TODO: Check which parameters here are actually used and prune out all the ones that aren't
-
 # General parameters
 use_optuna: True
+train_stage: 2  
 output_dir: '/data/datasets/research-datasets/output_dir'
 seed: 906579864 
-new_random: False
 phase: 'train'
-cfg_name: 'deit-rnt100-multistage'
 
 # Dataset parameters
 dataroot: '/data/datasets/research-datasets'
 dataset: 'reid_mm/RGBNT100'
 dataset_name: 'RGBNT100'
-workers: 128
+
 input_size: [224, 224] # 224 normally, 384 for larger deit
+
+data_augmentation: False
 hflip: 0.5 # threshold for random horizontal flip
 resize_min: 0.8 # only if data_augmentation is True
 resize_max: 1.0 # only if data_augmentation is True
-data_augmentation: False
-augment_type: "random_erasure" # Optional: "random_erasure"
+
+augment_type: 'random_erasure' # Optional: "random_erasure"
 train_ratio: 0.8 # use 80% of the data for training and 20% for validation
-one_hot: True
-image_num_for_reid_train: 1 # Default 1 -- DO NOT CHANGE THIS ONE AND num_triplet_samples AT SAME TIME THEY DO SAME THING
 image_num_for_reid_validate: 25 # Default 25
 num_triplet_samples: 8 # Default 1
 
 # Model parameters 
 model_modalities: ['R', 'N', 'T']
-non_generalizable_inputs: False
-model_anchor_only_reid: False # false by default
-model_num_cls_tokens: 1
+model_num_cls_tokens: 0
 model_num_fusion_tokens: 1
 model_num_heads: 8
 vit_embed_dim: 768 # 384 for dino, 768 normally
 model_decoder_output_class_num: 50 # change this when changing datasets
 model_fusion_combos: 'ffd'
+model_lrnable_fusion_avg: False
 data_token_step: 0
 pretrained_model: "distilled-224"
-unfreeze: True
+unfreeze_transformer_backbone: False
+lagging_modality_token: True
+one_hot: True
 
 # Loss parameters
 loss_fn: "center+ce+triplet_euclidean_soft_margin" 
-loss_weighting: 0.5
-center_weighting: 0.0005
+triplet_loss_weighting: 0.5 
+ce_loss_weighting: 0.5 
+center_loss_weighting: 0.0005
 label_smoothing: 0.1
-alpha: 1
 
 # Optimizer parameters
 optimizer: 'adamw'
@@ -52,37 +50,32 @@ lr: 0.00002
 weight_decay: 0.001
 beta1: 0.83
 beta2: 0.97
-lr_scheduler_name: ''
+lr_scheduler_name: '' # Different from stage 1
 warmup_steps: 50
 max_lr: 0.01
 reset_scheduler: False
 
 # Training parameters
 gpus: [1, 2, 3, 4, 5, 6, 7]
-# gpus: [4, 5, 6, 7]
-# gpus: [5, 6, 7, 4]
-train_stage: 2  
 
 ckpt_dir: '/data/datasets/research-datasets/ckpt_dir'
 ckpt_full_path: /data/datasets/research-datasets/ckpt_dir/20230814-103827-deit-rnt100-model-modality-tok/best.pth #/data/datasets/research-datasets/ckpt_dir/20230814-103827-deit-rnt100-model-modality-tok/best.pth # INSERT HERE
+
 batch_size: 20
 num_epochs: 60
 print_freq: 50
 model_name: "deit_gradual_fusion"
 trainer_name: "trainer_rgbn_triplet"
-verbose: True # print more information
-max_rank: 50 # max number of ranks to calculate cmc and mAP
-n_trials: 1 # number of trials for optuna
-
-lrnable_token: 'new'
-lagging_modality_token: True
+verbose: True # Setting for printing more information
+max_rank: 50 # Max number of ranks to calculate cmc and mAP
+n_trials: 1 # Number of trials for optuna
 
 # Weights and Biases Logging
 use_wandb: True
-wandb_project: "mm-mafia-reid-new-mAP"
-study_name: "deit-rnt100-model-data-tok-conv-pool"
-wandb_run_name: "deit-rnt100-stage2"
-wandb_trial_name: "deit-rnt100-stage2"
+wandb_project: 'mm-mafia-reid-new-mAP'
+study_name: 'deit-rnt100-clean-code-test'
+wandb_run_name: 'initial-test'
+wandb_trial_name: 'initial-test'
 
 hyperparams:
   lr:
@@ -109,6 +102,3 @@ hyperparams:
     min: 1
     max: 1
     type: int
-  model_num_heads: 
-    opt: [8]
-    type: categorical
