--- a/cfgs/deit_gradual_fusion_rnt100_testing.yaml
+++ b/cfgs/deit_gradual_fusion_rnt100_testing.yaml
@@ -1,54 +1,53 @@
-# TODO: Check which parameters here are actually used and prune out all the ones that aren't
-
 # General parameters
-use_optuna: False
+use_optuna: True
+train_stage: 1
 output_dir: '/data/datasets/research-datasets/output_dir'
 seed: 906579864 
-new_random: False
 phase: 'val'
-cfg_name: 'deit-rnt100-multistage'
 
 # Dataset parameters
 dataroot: '/data/datasets/research-datasets'
 dataset: 'reid_mm/RGBNT100'
 dataset_name: 'RGBNT100'
-workers: 128
+
 input_size: [224, 224] # 224 normally, 384 for larger deit
+
+data_augmentation: False
 hflip: 0.5 # threshold for random horizontal flip
 resize_min: 0.8 # only if data_augmentation is True
 resize_max: 1.0 # only if data_augmentation is True
-data_augmentation: False
-augment_type: "random_erasure" # Optional: "random_erasure"
-train_ratio: 0.8 # use 80% of the data for training and 20% for validation
-one_hot: True
-image_num_for_reid_train: 1 # Default 1 -- DO NOT CHANGE THIS ONE AND num_triplet_samples AT SAME TIME THEY DO SAME THING
+
+augment_type: 'random_erasure' # Optional: "random_erasure", else ""
+train_ratio: 0.8 # 80% for training and 20% for validation
 image_num_for_reid_validate: 25 # Default 25
 num_triplet_samples: 8 # Default 1
 
 # Model parameters 
-model_modalities: ['R', 'N', 'T']
-non_generalizable_inputs: False
-model_anchor_only_reid: False # false by default
-model_num_cls_tokens: 1
-model_num_fusion_tokens: 1
-model_num_heads: 8
-vit_embed_dim: 768 # 384 for dino, 768 normally
-model_decoder_output_class_num: 50 # change this when changing datasets
-model_fusion_combos: 'ffd'
-data_token_step: 0
-pretrained_model: "distilled-224"
-unfreeze: True
+model_modalities: ['R', 'N', 'T'] #need
+model_num_cls_tokens: 0
+model_num_fusion_tokens: 1 #need, but not for optuna
+model_num_heads: 8 #need
+vit_embed_dim: 768 # 384 for dino, 768 normally # need
+model_decoder_output_class_num: 50 # need, change this when changing datasets
+model_fusion_combos: 'ffd' #need
+model_lrnable_fusion_avg: False
+data_token_step: 0 #need
+pretrained_model: 'distilled-224' # need
+unfreeze_transformer_backbone: False
+lagging_modality_token: True
+one_hot: True
+
 
 # Loss parameters
-loss_fn: "ce+triplet_euclidean_soft_margin" 
-loss_weighting: 0.5
-center_weighting: 0.0005
+loss_fn: 'ce+triplet_euclidean_soft_margin'
+triplet_loss_weighting: 0.5 
+ce_loss_weighting: 0.5 
+center_loss_weighting: 0.0005
 label_smoothing: 0.1
-alpha: 1
 
 # Optimizer parameters
 optimizer: 'adamw'
-lr: 0.000005
+lr: 0.00002
 weight_decay: 0.001
 beta1: 0.83
 beta2: 0.97
@@ -58,27 +57,26 @@ max_lr: 0.01
 reset_scheduler: False
 
 # Training parameters
-# gpus: [5]
-gpus: [4]
-# gpus: [5, 6, 7, 4]
+gpus: [0,]
 
 ckpt_dir: '/data/datasets/research-datasets/ckpt_dir'
-ckpt_full_path: '/data/datasets/research-datasets/ckpt_dir/20230808-092335-deit-rnt100-multistage/best.pth' #'/data/datasets/research-datasets/ckpt_dir/20230807-183741-deit-rnt100-multistage/best.pth'
-batch_size: 20
-num_epochs: 20
+ckpt_full_path: null 
+
+batch_size: 26
+num_epochs: 40
 print_freq: 50
-model_name: "deit_gradual_fusion"
-trainer_name: "trainer_rgbn_triplet"
-verbose: True # print more information
-max_rank: 50 # max number of ranks to calculate cmc and mAP
-n_trials: 1 # number of trials for optuna
+model_name: 'deit_gradual_fusion'
+trainer_name: 'trainer_rgbn_triplet'
+verbose: True # Setting for printing more information
+max_rank: 50 # Max number of ranks to calculate cmc and mAP
+n_trials: 1 # Number of trials for optuna
 
 # Weights and Biases Logging
-use_wandb: False
-wandb_project: "mm-mafia-reid-new-mAP"
-study_name: "deit-rnt100-multistage"
-wandb_run_name: "deit-rnt100-multistage"
-wandb_trial_name: "stage1-RN300"
+use_wandb: True
+wandb_project: 'mm-mafia-reid-new-mAP'
+study_name: 'deit-rnt100-clean-code-test'
+wandb_run_name: 'initial-test'
+wandb_trial_name: 'initial-test'
 
 hyperparams:
   lr:
@@ -98,20 +96,10 @@ hyperparams:
     max: 0.98
     type: float
   model_num_cls_tokens: 
-    min: 1
-    max: 1
+    min: 0
+    max: 0
     type: int
   model_num_fusion_tokens: 
     min: 1
     max: 1
     type: int
-  model_num_heads: 
-    opt: [8]
-    type: categorical
-
-# Visualization configs
-visualize_embeddings: True
-vis_save_path: "./visualizations/"
-vis_dim: 2
-vis_reduction_method: 'tsne'
-
